--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wednesday-Car</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   
     <header>
-        <img src="" alt="logo">
-        <h1 style="color: darkblue;">Wednesday</h1>
+        <img src="src/wwlogo.png" alt="logo" style="height: 50px; width: 50px;">
+        <h1>Wednesday</h1>
     </header>
 
     <nav>
@@ -17,13 +19,19 @@
         <a href="#">Acerca</a>
         <a href="https://www.facebook.com/alberto.gl.180/">Social</a>
     </nav>
+    <hr>
     <main>
         <div id="Wednesday">
             <div id="left">
                 <div class="display">
-                    <img src="" alt="car">
+                    <img src="src/mustang.webp" alt="car">
                 </div>
-                <div id="dpad"></div>
+            
+                <div id="dpad">
+                    <div id="dpad-top"></div>
+                    <div id="dpad-horizontal"></div>
+                    <div id="dpad-bottom"></div>
+                </div>
                 <div id="btn-circle"></div>
 
             </div>
@@ -31,16 +39,16 @@
                 <div class="display">
                     <ul>
                         <li>
-                            <p><b>Marca</b></p>
+                            <p><b>Marca: Ford</b></p>
                         </li>
                         <li>
-                            <p><b>Modelo</b></p>
+                            <p><b>Modelo: Mustang GT</b></p>
                         </li>
                         <li>
-                            <p><b>Potencia</b></p>
+                            <p><b>Potencia: 640hp</b></p>
                         </li>
                         <li>
-                            <p><b>Precio</b></p>
+                            <p><b>Precio: $ 800,000.00mxn</b></p>
                         </li>
                     </ul>
 
