--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap">
 </head>
 <body>
-   
+       
     <header>
         <img src="src/wwlogo.png" alt="logo" style="height: 50px; width: 50px;">
         <h1>Wednesday</h1>
     </header>
 
+
     <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Acerca</a>
-        <a href="https://www.facebook.com/alberto.gl.180/">Social</a>
+        <a href="#" id="a2">Acerca</a>
+        <a href="#" id="a1">Inicio</a>
+        <a href="https://www.facebook.com/alberto.gl.180/" id="a3">Social</a>
     </nav>
     <hr>
     <main>
@@ -33,7 +34,7 @@
                     <div id="dpad-horizontal"></div>
                     <div id="dpad-bottom"></div>
                 </div>
-                <div id="btn-circle"></div>
+                <button id="btn-circle"></button>
 
             </div>
             <div id="right">
@@ -70,5 +71,6 @@
 
         </div>
     </main>
+
 </body>
 </html>
