--- a/index.html
+++ b/index.html
@@ -7,6 +7,84 @@
     <title>Wednesday-Car</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap">
+    <style>
+        @media only screen and (max-width: 500px) {
+            .nav {
+                padding: 0%;
+                width: 100%;
+                height: auto;
+            }
+            .items-nav {
+                margin-top: 5px;
+                margin-bottom: 5px;
+                margin-left: 0px;
+                margin-right: 0px;
+                width: 80px;
+            }
+            .items-menu {
+                justify-content: space-between;
+                align-items: center;
+            }
+            .item {
+                width: 90%;
+                margin-bottom: 30px;
+            }
+            .header {
+                padding: 0px;
+                margin-bottom: 10px;
+                justify-content: space-between;
+                align-items: flex-start;
+            }
+
+        @media screen and  (max-width:505px) {
+            .item {
+                width: 70%;
+            }
+            nav {
+                height: 100px;
+            }
+         }
+        @media  screen and (min-width: 700px) {
+            .item {
+                height: 70%;
+            }    
+            nav {
+                height: 75%;
+                justify-content: flex-start;
+            }
+        }
+        @media screen and (min-width:980px) {
+            .item {
+                width: 30%;
+            }
+        }
+        @media screen and (min-width: 1040px){
+            .class-marca {
+                margin-bottom: 10px;
+            }
+            .class-header {
+                display: inline;
+                justify-content: space-between;
+                align-items: center;
+            }
+        }
+        @media screen and (min-width: 1200px) {
+            .item {
+                width: 22%;
+            }
+            .class-header {
+                padding-bottom: 0px;
+                padding-left: 60px;
+                padding-right: 60px;
+                padding-top: 0px;
+             }
+        }
+            .main {
+                padding-top: 20px;
+                padding-bottom: 20px;
+        }
+        }
+    </style>
 </head>
 <body>
        
